--- a/templates/Profiles/main.html
+++ b/templates/Profiles/main.html
@@ -6,7 +6,7 @@ Home
 {%if request.user.is_authenticated%}
 {{request.user}}
 {%else%}
-<a href=""><button class="btn btn-outline-primary">Sign Up</button></a>
+<a href="{%url 'Profiles:signUp'%}"><button class="btn btn-outline-primary">Sign Up</button></a>
 {%endif%}
 
 {%endblock%}
